@@ -2,7 +2,7 @@
 METASOURCES = AUTO
 libdir = /usr/share/g15daemon/plugins
 
-lib_LTLIBRARIES =g15plugin_uinput.la g15plugin_tcpserver.la 
+lib_LTLIBRARIES =g15plugin_uinput.la g15plugin_tcpserver.la g15plugin_clock.la
 INCLUDES = -I$(top_builddir)/libg15daemon_client/ -I$(top_builddir)/g15daemon
 
 g15plugin_uinput_la_SOURCES = g15_plugin_uinput.c
@@ -10,3 +10,6 @@ g15plugin_uinput_la_LDFLAGS = -avoid-version -module
 
 g15plugin_tcpserver_la_SOURCES = g15_plugin_net.c
 g15plugin_tcpserver_la_LDFLAGS = -avoid-version -module 
+
+g15plugin_clock_la_SOURCES = g15_plugin_clock.c
+g15plugin_clock_la_LDFLAGS = -avoid-version -module 
